[fix] recorder: not being able to stop recording playback [fix] Live section's sun covering the informational header

--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -305,6 +305,7 @@ header {
   width: 100%;
   display: flex;
   justify-content: center;
+  z-index: 1;
 }
 header p, header h4 {
   margin: 0 1rem;
